// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SummaryItem.vue renders correctly if money 1`] = `
<div class="summary-item" style="background-color: rgb(255, 255, 255);">
  <h1 class="summary-item__title" style="color: rgb(27, 37, 51);">test</h1>
  <p class="summary-item__value" style="color: rgb(0, 0, 0);">$1.00</p>
</div>
`;

exports[`SummaryItem.vue renders correctly if not money 1`] = `
<div class="summary-item" style="background-color: rgb(255, 255, 255);">
  <h1 class="summary-item__title" style="color: rgb(27, 37, 51);">test</h1>
  <p class="summary-item__value" style="color: rgb(0, 0, 0);">100</p>
</div>
`;
